[FIX] Remove reference to dev database

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_CaseDocumentPrint.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/_CaseDocumentPrint.cshtml
@@ -73,7 +73,7 @@
                                 if (!string.IsNullOrEmpty(paragraphText.Text))
                                 {
                                     <tr>
-                                        <td class="table-two-colums-first-column">APA@paragraphText.Headline.ToHtmlString()</td>
+                                        <td class="table-two-colums-first-column">@paragraphText.Headline.ToHtmlString()</td>
                                         <td class="table-two-colums-second-column">@paragraphText.Text.ToHtmlString()</td>
                                     </tr>
                                 }
