[ADD] #59140 Add department as filter for Feedback reports

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Feedback/Statistics.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Feedback/Statistics.cshtml
@@ -41,6 +41,12 @@
                                     </div>
                                 </td>
                             </tr>
+                            <tr>
+                                <td class="span3">@Translation.GetCoreTextTranslation("Avdelning")</td>
+                                <td>
+                                    @Html.DropDownListFor(m => m.StatisticsFilter.Departments, Model.Departments, new { multiple = "multiple", @class="chosen-select", id= "Departments" })
+                                </td>
+                            </tr>
                         </table>
                     }
                 </div>
