--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Invoices/Views/Overview/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Invoices/Views/Overview/Index.cshtml
@@ -4,7 +4,9 @@
 @using DH.Helpdesk.Web.Infrastructure.Extensions
 @using DH.Helpdesk.Web.Infrastructure.Extensions.HtmlHelperExtensions
 @using DH.Helpdesk.Web.Infrastructure.UrlHelpers.Mvc.Invoices
+@using DH.Helpdesk.Web.Models.Shared;
 @model DH.Helpdesk.Web.Areas.Invoices.Models.InvoiceOverviewViewModel
+
 @section Actions {
 <ul class="secnav">
 	<li>
@@ -12,7 +14,7 @@
 	</li>
 	<li>
 		<input type="button" value="@Translation.Get("Export")" class="btn" id="btnExportGrid" />
-	</li>
+	</li>    
 </ul>
 }
 <div>
@@ -45,7 +47,8 @@
 		<thead>
 			<tr>
 				<th></th>
-				<th>@Translation.GetCoreTextTranslation("Ärende")</th>
+                <th></th>
+				<th>@Translation.GetCoreTextTranslation("Ärende") &nbsp;</th>
 				<th>@Translation.GetCoreTextTranslation("Text")</th>
 				<th>@Translation.CaseString(GlobalEnums.TranslationCaseFields.Category_Id.ToString())</th>
 				<th>@Translation.GetCoreTextTranslation("Avslutsdatum")</th>
@@ -64,6 +67,10 @@
 		</thead>
 		<tbody></tbody>
 	</table>
+</div>
+
+<div>
+    @Html.Partial("~/Views/Cases/_CasePrint.cshtml", new ReportModel())
 </div>
 
 @section Scripts {
@@ -87,12 +94,14 @@
 				getListUrl: "@Url.Action(MvcInvoicesUrlName.Overview.GetInvoicesOverviewList, MvcInvoicesUrlName.Overview.Controller)",
 				saveValuesUrl: "@Url.Action(MvcInvoicesUrlName.Overview.SaveInvoiceValues, MvcInvoicesUrlName.Overview.Controller)",
 				actionUrl: "@Url.Action(MvcInvoicesUrlName.Overview.InvoiceAction, MvcInvoicesUrlName.Overview.Controller)",
-				exportUrl: "@Url.Action(MvcInvoicesUrlName.Overview.InvoiceExport, MvcInvoicesUrlName.Overview.Controller)",
+			    exportUrl: "@Url.Action(MvcInvoicesUrlName.Overview.InvoiceExport, MvcInvoicesUrlName.Overview.Controller)",
+                showCaseInfoUrl: '@Url.Content("~/Cases/ShowCasePrintPreview/")',
 				minStep: @ViewBag.MinStep
 			});
-			window.pageObj = pageObj;
+		    window.pageObj = pageObj;
+		    
 		});
-
+                
 	</script>
 }
 
